[package]
name = "mine_clone"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.17.2"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_seeder = "0.4.0"
noise = "0.9.0"
tokio = { version = "1.44.2", features = [ "full" ] }



[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

# Enable a large amount of optimization in the dev profile for dependencies
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
